# robot-web-search-agent

./: .env.example  .gitignore  Dockerfile  README.md  company_registry_checker_v2.py  dashboard.py  docker-compose.yml  pyproject.toml  start.bat
app/: __init__.py  config.py  database.py  main.py  models.py  run_manager.py  scheduler.py  schemas.py
app/services/: baseline.py  database_matcher.py  extractor.py  fetcher.py  model_api.py  model_config.py  pipeline.py  planner.py  product_backfill.py  product_extractor.py  product_inventory_matcher.py  product_pipeline.py  product_rules.py  qcc_config.py  qcc_fuzzy_search.py  result_exporter.py  scoring.py  search.py
app/web/: index.html
app/web/assets/: app.js  styles.css
robot_lead_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_baseline.py  test_company_listing.py  test_database_matcher.py  test_model_config.py  test_model_safety.py  test_name_translation.py  test_pipeline.py  test_planner.py  test_product_backfill.py  test_product_extractor.py  test_product_inventory_matcher.py  test_product_pipeline.py  test_product_rules.py  test_qcc_config.py  test_qcc_fuzzy_search.py  test_relation_listing.py  test_result_exporter.py  test_scoring.py  test_search.py  test_web_ui.py
